compiler/tools/fpp-check/test/state_machine/redef/state.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/state.fpp:3.3
  state s
  ^
error: redefinition of symbol s
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/state.fpp:2.3
  state s
  ^
